Swagger generation, and some minor tweaks
